# sidekick

./: .gitignore  .ocamlformat  .travis.yml  Makefile  README.md  TODO.md  cdcl.opam  dagon.opam  dune  dune-project  index.html  index.md  leancheck.sh  msat.opam  msat_test.opam  proof-trace-dump.sh  sidekick-arith.opam  sidekick-base.opam  sidekick-bin.opam  sidekick.opam  sidekick.sh  sudoku_solve.sh
.github/workflows/: gh-pages.yml  main.yml
dev/: index.html
dev/sidekick/: index.html
dev/sidekick-arith/: index.html
dev/sidekick-base/: index.html
dev/sidekick-bin/: index.html
doc/: dune  guide.md  mdx_runner.ml  small_solver.ml
examples/sudoku/: dune  sudoku_solve.ml
examples/sudoku/tests/: dune  head15_top1465.expected  head15_top1465.txt
msat_test/: index.html
sidekick/: index.html
sidekick/CDCL_tseitin/: index.html
sidekick/CDCL_tseitin__/: index.html
sidekick/CDCL_tseitin__Tseitin_intf/: index.html
sidekick/Sidekick_backend/: index.html
sidekick/Sidekick_backend__Backend_intf/: index.html
sidekick/Sidekick_backend__Coq/: index.html
sidekick/Sidekick_backend__Dedukti/: index.html
sidekick/Sidekick_backend__Dimacs/: index.html
sidekick/Sidekick_backend__Dot/: index.html
sidekick/Sidekick_dimacs/: index.html
sidekick/Sidekick_dimacs__/: index.html
src/: dune
src/arith/tests/: dune  run_tests.ml  test_simplex.ml  test_simplex2.ml  test_simplex2.real.ml
src/backend/: Backend_intf.ml  Coq.ml  Coq.mli  Dedukti.ml  Dedukti.mli  Dimacs.ml  Dimacs.mli  Dot.ml  Dot.mli  dune  jbuild
src/base/: Arith_types_.ml  Base_types.ml  CCHet.ml  CCHet.mli  Chunk_stack.ml  Chunk_stack.mli  Config.ml  Config.mli  Data_ty.ml  Data_ty.mli  Form.ml  Form.mli  Hashcons.ml  Het.ml  Het.mli  ID.ml  ID.mli  LIA_term.ml  LRA_term.ml  LRA_term.mli  Lit.ml  Lit.mli  Model.ml  Model.mli  Proof.ml  Proof.mli  Proof_dummy.ml  Proof_dummy.mli  Proof_quip.ml  Proof_quip.mli  Proof_quip.mli.tmp  Proof_storage.ml.tmp  Proof_storage.mli.tmp  Proof_stub.ml  Proof_stub.mli  Sidekick_base.ml  Solver.ml  Solver_arg.ml  Solver_arg.mli  Statement.ml  (+16 more)
src/base-solver/: Form.ml  dune  sidekick_base_solver.ml
src/base/proof-trace/: .ocamlformat-ignore  dune  proof_ser.bare
src/base/solver/: dune  sidekick_base_solver.ml
src/bin-lib/: Dimacs_parser.ml  Dimacs_parser.mli  Drup_lexer.mll  Drup_parser.ml  Drup_parser.mli  Sidekick_bin_lib.ml  dune  trace_setup.dummy.ml  trace_setup.fuchsia.ml  trace_setup.mli  trace_setup.real.ml
src/cc/: CC.ml  CC.mli  CC_types.ml  Congruence_closure.ml  Congruence_closure.mli  Congruence_closure_intf.ml  Mini_cc.ml  Mini_cc.mli  Sidekick_cc.ml  Sidekick_cc.mli  bits.ml  bits.mli  core_cc.ml  dune  e_node.ml  e_node.mli  expl.ml  expl.mli  plugin.ml  plugin.mli  resolved_expl.ml  resolved_expl.mli  signature.ml  sigs.ml  sigs_plugin.ml  small_uf.ml  small_uf.mli  types_.ml  view.ml  view.mli
src/cc/mini/: Sidekick_mini_cc.ml  Sidekick_mini_cc.mli  dune
src/cc/mini/tests/: dune  sidekick_test_minicc.ml
src/cc/plugin/: dune  sidekick_cc_plugin.ml  sidekick_cc_plugin.mli
src/cdsat/: TLit.ml  TLit.mli  TVar.ml  TVar.mli  conflict.ml  conflict.mli  core.ml  core.mli  dune  plugin_bool.ml  plugin_bool.mli  plugin_uninterpreted.ml  plugin_uninterpreted.mli  reason.ml  reason.mli  sidekick_cdsat.ml  solver.ml  solver.mli  term_to_var.ml  term_to_var.mli  trail.ml  trail.mli  union_find.ml  union_find.mli  value.ml  value.mli  vars_to_decide.ml  vars_to_decide.mli  watch1.ml  watch1.mli  watch2.ml  watch2.mli  watch_res.ml  watch_schemes.ml  watch_schemes.mli  watch_utils_.ml
src/intsolver/tests/: dune  sidekick_test_intsolver.ml
src/lra/tests/: dune  test_simplex2.real.ml
src/main/: Dimacs_lexer.mll  Dimacs_parser.ml  Dimacs_parser.mli  dune  jbuild  main.ml  pure_sat_solver.ml  show_trace.ml  sidekick_version.ml
src/proof-trace/: .ocamlformat-ignore  Storage.ml  Storage.mli  dune  proof_ser.bare  proof_ser.ml  sidekick_base_proof_trace.ml
src/proof-trace/dummy/: Sidekick_proof_trace_dummy.ml  dune
src/proof-trace/dyn/: Sidekick_proof_trace_dyn.ml  dune
src/sat/: CDCL_sat.ml  CDCL_sat.mli  Dagon_sat.ml  Heap.ml  Heap.mli  Heap_intf.ml  Internal.ml  Msat_sat.ml  Msat_sat.mli  Proof_dummy.ml  Proof_dummy.mli  Res.ml  Res_intf.ml  Sidekick_sat.ml  Solver.ml  Solver.mli  Solver_intf.ml  Solver_types.ml  Solver_types.mli  Solver_types_intf.ml  Th_sat.ml  Th_sat.mli  Theory_intf.ml  base_types_.ml  dune  heap.ml  heap.mli  heap_intf.ml  jbuild  sigs.ml  solver.ml  solver.mli  store.ml  store.mli  tracer.ml  tracer.mli
src/sigs/cc/: dune  sidekick_sigs_cc.ml
src/sigs/smt/: Sidekick_sigs_smt.ml  dune
src/simplex/tests/: dune  test_simplex.real.ml
src/smt/: Ast.ml  Ast.mli  Bag.ml  Bag.mli  CC.ml  CC.mli  Clause.ml  Clause.mli  Config.ml  Congruence_closure.ml  Congruence_closure.mli  Cst.ml  Cst.mli  DESIGN.md  Eq_class.mli  Equiv_class.ml  Equiv_class.mli  Explanation.ml  Hash.ml  Hash.mli  Hashcons.ml  Het_map.mli  IArray.ml  IArray.mli  ID.ml  ID.mli  Lit.ml  Lit.mli  Mini_cc.ml  Mini_cc.mli  Mini_cc_intf.ml  Model.ml  Model.mli  Process.ml  Process.mli  Sidekick_smt.ml  Sidekick_smt_solver.ml  Solver.ml  Solver.mli  Solver_types.ml  (+44 more)
src/smt/th_bool/: Dagon_th_bool.ml  Dagon_th_bool.mli  Sidekick_th_bool.ml  Sidekick_th_bool.mli  jbuild
src/smtlib/: Ast.ml  Ast.mli  Convert.mli  Dagon_smtlib.ml  Dagon_smtlib.mli  Driver.ml  Driver.mli  Form.ml  Locations.ml  Parse_ast.ml  Parser.mly  Process.ml  Process.mli  Proof.ml  Proof.mli  Sidekick_smtlib.ml  Sidekick_smtlib.mli  Typecheck.ml  Typecheck.mli  build_model.ml  build_model.mli  check_cc.ml  check_cc.mli  common_.ml  dune  jbuild  lra.ml  model.ml  model.mli  progress_bar.ml  progress_bar.mli  solver.ml
src/tef/: Sidekick_tef.dummy.ml  Sidekick_tef.ml  Sidekick_tef.mli  Sidekick_tef.real.ml  dune
src/tests/: basic.cnf  basic.drup.expected  dune  run_tests.ml
src/tests/regression/: dune  reg_model_lra1.out.expected  reg_model_lra1.smt2
tests/: QF_DT  QF_UF  benchpress.sexp  conf.toml  dune  jbuild  logitest.sexp  run  test_api.ml
unittest/old/regression/: dune
(+5277 files in other folders)
