opam-version: "1.2"
name: "cdcl"
license: "Apache"
version: "dev"
author: ["Sylvain Conchon" "Alain Mebsout" "Stephane Lecuyer" "Simon Cruanes" "Guillaume Bury"]
maintainer: ["guillaume.bury@gmail.com" "simon.cruanes.2007@m4x.org"]
build: ["jbuilder" "build" "@install" "-p" name]
build-doc: ["jbuilder" "build" "@doc" "-p" name]
install: ["jbuilder" "install" name]
remove: ["jbuilder" "uninstall" name]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
]
depopts: [
  "dolmen"
]
available: [
  ocaml-version >= "4.03.0"
]
tags: [ "sat" "smt" ]
homepage: "https://github.com/c-cube/cdcl"
dev-repo: "https://github.com/c-cube/cdcl.git"
bug-reports: "https://github.com/c-cube/cdcl/issues/"

