opam-version: "2.0"
name: "sidekick-base"
license: "Apache"
synopsis: "Standalone term definition for the SMT solver library sidekick"
version: "dev"
author: ["Simon Cruanes"]
maintainer: ["simon.cruanes.2007@m4x.org"]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "containers" { >= "3.0" & < "4.0" }
  "iter" { >= "1.0" & < "2.0" }
  "ocaml" { >= "4.04" }
  "sidekick" { = version }
  "zarith" { >= "1.8" } # constraint for infix ops
  "bare_encoding" {dev}
  "alcotest" {with-test}
  "qcheck" {with-test & >= "0.16" }
  "odoc" {with-doc}
  "mdx" {with-test}
]
tags: [ "sat" "smt" ]
homepage: "https://github.com/c-cube/sidekick"
dev-repo: "git+https://github.com/c-cube/sidekick.git"
bug-reports: "https://github.com/c-cube/sidekick/issues/"

