opam-version: "2.0"
name: "sidekick-bin"
license: "Apache"
synopsis: "SMT solver based on msat and CDCL(T) (standalone binary)"
version: "dev"
author: ["Simon Cruanes" "Guillaume Bury"]
maintainer: ["simon.cruanes.2007@m4x.org"]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs ] {with-doc}
  # ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "1.1" }
  "containers" { >= "3.0" & < "4.0" }
  "iter"
  "zarith"
  "smtlib-utils" { >= "0.1" & < "0.3" }
  "sidekick" { = version }
  "menhir"
  "msat" { >= "0.8" < "0.9" }
  "ocaml" { >= "4.03" }
]
tags: [ "sat" "smt" ]
homepage: "https://github.com/c-cube/sidekick"
dev-repo: "git+https://github.com/c-cube/sidekick.git"
bug-reports: "https://github.com/c-cube/sidekick/issues/"

