opam-version: "2.0"
name: "sidekick"
license: "Apache"
synopsis: "SMT solver based on msat and CDCL(T) (functor library)"
version: "dev"
author: ["Simon Cruanes" "Guillaume Bury"]
maintainer: ["simon.cruanes.2007@m4x.org"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs ] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "2.0" }
  "containers" { >= "3.6" & < "4.0" }
  "iter" { >= "1.0" & < "2.0" }
  "ocaml" { >= "4.08" }
  "zarith" { with-test }
  "alcotest" {with-test}
  "odoc" {with-doc}
]
depopts: [
  "mtime"   # for profiling stuff
  "memtrace" # memory profiling
  "zarith" # for arithmetic
]
conflicts: [
  "zarith" { < "1.8" } # for infix ops
]
tags: [ "sat" "smt" ]
homepage: "https://github.com/c-cube/sidekick"
dev-repo: "git+https://github.com/c-cube/sidekick.git"
bug-reports: "https://github.com/c-cube/sidekick/issues/"

