
(rule
 (targets guide.md.corrected)
 (deps (package sidekick) (package sidekick-base) ./mdx_runner.exe (:file guide.md))
 (action (run ./mdx_runner.exe %{file} %{targets})))

(alias
 (name runtest)
 (package sidekick-base)
 (action (diff guide.md guide.md.corrected)))

(executable
  (name mdx_runner)
  (modules mdx_runner)
  (modes native))

(executable
  (name small_solver)
  (modules small_solver)
  (flags :standard -warn-error -a+8)
  (libraries containers sidekick.core sikekick-base sikekick-base.solver)
  (modes native))
