(library
 (name sidekick_base)
 (public_name sidekick-base)
 (synopsis "Base term definitions for the standalone SMT solver and library")
 (libraries containers sidekick.core sidekick.util sidekick.lit
            sidekick.arith-lra sidekick.th-bool-static sidekick.th-data
            sidekick.zarith
            zarith)
 (flags :standard -w -32 -open Sidekick_util))

(rule
  (targets proof_ser.ml)
  (deps proof_ser.bare)
  (mode promote) ; not required in releases
  (action (run bare-codegen --standalone %{deps} -o %{targets})))

