(library
 (name sidekick_base)
 (public_name sidekick-base)
 (synopsis "Base term definitions for the standalone SMT solver and library")
 (libraries containers iter sidekick.core sidekick.util sidekick.lit
   sidekick-base.proof-trace sidekick.quip sidekick.arith-lra
   sidekick.th-bool-static sidekick.th-data sidekick.zarith zarith
   sidekick.proof-trace.dummy)
 (flags :standard -w -32 -open Sidekick_util))
