(library
 (name sidekick_bin_lib)
 (public_name sidekick-bin.lib)
 (synopsis "Utils for the sidekick binaries")
 (libraries containers sidekick.util
            (select trace_setup.ml from
              (trace-fuchsia -> trace_setup.fuchsia.ml)
              (trace-tef -> trace_setup.tef.ml)
              (-> trace_setup.dummy.ml)))
 (flags :standard -warn-error -a+8 -open Sidekick_util))

(ocamllex
 (modules Dimacs_lexer Drup_lexer))
