

(library
  (name Sidekick_cc)
  (public_name sidekick.cc)
  (libraries containers containers.data msat sequence sidekick.util)
  (flags :standard -warn-error -a+8
         -color always -safe-string -short-paths -open Sidekick_util)
  (ocamlopt_flags :standard -O3 -color always
                  -unbox-closures -unbox-closures-factor 20))
