; main binary

(executable
 (name main)
 (public_name sidekick)
 (package sidekick-bin)
 (modes native)
 (libraries containers iter result sidekick.sat sidekick.core sidekick-base
   sidekick.smt-solver sidekick-bin.smtlib sidekick.tef sidekick.drup
   sidekick.memtrace sidekick-bin.lib)
 (flags :standard -safe-string -color always -open Sidekick_util))
