; main binary

(executable
 (name main)
 (public_name sidekick)
 (package sidekick-bin)
 (modules main pure_sat_solver)
 (modes native)
 (libraries containers iter result sidekick.sat sidekick.core sidekick-base
   sidekick.smt-solver sidekick-base.smtlib sidekick.tef sidekick.drup
   sidekick.memtrace sidekick-bin.lib)
 (flags :standard -safe-string -color always -open Sidekick_util))

(executable
 (name show_trace)
 (modules show_trace)
 (modes native)
 (libraries containers sidekick.util sidekick.core sidekick.trace
   sidekick.smt-solver sidekick-base)
 (flags :standard -safe-string -color always -open Sidekick_util))
