
(library
  (name Sidekick_smt)
  (public_name sidekick.smt)
  (libraries containers containers.data iter
             sidekick.util sidekick.cc msat zarith)
  (flags :standard -warn-error -a+8
         -color always -safe-string -short-paths -open Sidekick_util)
  (ocamlopt_flags :standard -O3 -color always
                  -unbox-closures -unbox-closures-factor 20))
