(library
 (name sidekick_smtlib)
 (public_name sidekick.smtlib)
 (libraries containers zarith msat sidekick.core sidekick.util
   sidekick.msat-solver sidekick.base-term sidekick.th-bool-static
   sidekick.mini-cc msat.backend)
 (flags :standard -open Sidekick_util))

(menhir
 (modules Parser))

(ocamllex
 (modules Lexer))
