(library
 (name sidekick_smtlib)
 (public_name sidekick-bin.smtlib)
 (libraries containers zarith msat sidekick.core sidekick.util
   sidekick.msat-solver sidekick.base-term sidekick.th-bool-static
   sidekick.mini-cc sidekick.th-data sidekick.th-lra msat.backend smtlib-utils)
 (flags :standard -warn-error -27-37 -open Sidekick_util))

; TODO: enable warn-error again
