(executable
 (name run_tests)
 (modules run_tests)
 (modes native)
 (libraries containers alcotest qcheck sidekick.util sidekick_test_simplex
   sidekick_test_util sidekick_test_minicc)
 (flags :standard -warn-error -a+8 -color always))

(alias
 (name runtest)
 (locks /test)
 (package sidekick)
 (action
  (progn
   (run ./run_tests.exe alcotest) ; run regressions first
   (run ./run_tests.exe qcheck --verbose))))

(rule
 (targets basic.drup)
 (deps
  (:pb basic.cnf)
  (:solver ../main/main.exe))
 (action
  (run %{solver} %{pb} -t 2 -o %{targets})))

(alias
 (name runtest)
 (locks /test)
 (package sidekick-bin)
 (action
  (diff basic.drup.expected basic.drup)))
