(executable
 (name run_tests)
 (libraries containers sidekick-arith.lra zarith iter alcotest qcheck)
 (flags :standard -warn-error -a+8 -color always))

(alias
 (name runtest)
 (locks /test)
 (package sidekick-arith)
 (action
   (progn
     (run ./run_tests.exe alcotest) ; run regressions first
     (run ./run_tests.exe qcheck --verbose))))
