
(library
  (name sidekick_test_simplex2)
  (libraries zarith sidekick.arith-lra sidekick.util sidekick.zarith
             qcheck alcotest))

(rule
  (targets sidekick_test_simplex2.ml)
  (enabled_if (>= %{ocaml_version} 4.08.0))
  (action (copy test_simplex2.real.ml %{targets})))

(rule
  (targets sidekick_test_simplex2.ml)
  (enabled_if (< %{ocaml_version} 4.08.0))
  (action (with-stdout-to %{targets} (echo "let props=[];; let tests=\"simplex2\",[]"))))
