(library
 (name sidekick_test_simplex)
 (libraries zarith sidekick.simplex sidekick.util sidekick.zarith qcheck
   alcotest))

(rule
 (targets sidekick_test_simplex.ml)
 (enabled_if
  (>= %{ocaml_version} 4.08.0))
 (action
  (copy test_simplex.real.ml %{targets})))

(rule
 (targets sidekick_test_simplex.ml)
 (enabled_if
  (< %{ocaml_version} 4.08.0))
 (action
  (with-stdout-to
   %{targets}
   (echo "let props=[];; let tests=\"simplex\",[]"))))
